Add a bunch of footnotes and the g-buffer citation

--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -23,7 +23,7 @@ Rendering the reflective shadow map and the subsequent VPL sampling (center row 
 The final gathering step uses data from the clustered shading technique (upper row, detailed in \Cref{sec:concept:clusteredShading}) and performs interleaved sampling (right part of middle row, detailed in \Cref{sec:concept:interleavedSampling}).
 
 During final gathering, clamping is used to remove singularities. Since this is a fairly trivial solution, it is not covered further.
-In addition, the G-buffer rendering does not differ from common deferred rendering pipelines and is not covered further as well.
+In addition, the G-buffer rendering does not differ from common deferred rendering pipelines \citep{Saito:1990:ComprehensibleRendering} and is not covered further as well.
 
 
 \section{Virtual Point Light Sampling with Reflective Shadow Maps}
