--- a/chap-introductionGI.tex
+++ b/chap-introductionGI.tex
@@ -196,7 +196,7 @@ Radiance caching is orthogonal to the other techniques in so far as visibility s
 
 \subsection{Screen-Space Approaches}
 
-Screen-space approaches inherently suffer from the lack of information about objects that are outside of the view frustum or occluded. The latter is alleviated by deep g-buffers \citep{Mara:2014:DeepGBuffers, Mara:2016:DeepGBuffers2}, but working only within the frustum, even this approach is limited to small to medium-scale indirect illumination.
+Screen-space approaches inherently suffer from the lack of information about objects that are outside of the view frustum or occluded. The latter is alleviated by deep G-buffers \citep{Mara:2014:DeepGBuffers, Mara:2016:DeepGBuffers2}, but working only within the frustum, even this approach is limited to small to medium-scale indirect illumination.
 
 
 
