--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1121,3 +1121,20 @@ url = {http://advances.realtimerendering.com/s2016/index.html}
   year={2010},
   url = {http://bps10.idav.ucdavis.edu/}
 }
+
+@inproceedings{Saito:1990:ComprehensibleRendering,
+ author = {Saito, Takafumi and Takahashi, Tokiichiro},
+ title = {Comprehensible Rendering of 3-D Shapes},
+ booktitle = {Proceedings of the 17th Annual Conference on Computer Graphics and Interactive Techniques},
+ series = {SIGGRAPH '90},
+ year = {1990},
+ isbn = {0-89791-344-2},
+ location = {Dallas, TX, USA},
+ pages = {197--206},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/97879.97901},
+ doi = {10.1145/97879.97901},
+ acmid = {97901},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
