--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -126,6 +126,10 @@
 
 \todo[inline]{implementation pipeline \ref{fig:RenderingPipelineOverview} adds little value over concept pipeline.}
 
+\todo[inline]{nicer \Cref{fig:results:RSMBuffers}, maybe only one large divided in thirds, or zoomins}
+
+\todo[inline]{more difference in \Cref{fig:results:interleaved_quality}}
+
 \todo[inline]{Pipeline figures for all sections in implementation. e.g. create RSM, which is then sampled, and the samples are put into two buffers.}
 
 \todo[inline]{Interleaved shading algorithm figure comparing buffer splitting vs compute shaders in addition to pipeline figure \Cref{sec:impl:interleavedShading}}
@@ -137,6 +141,14 @@
 
 
 \subsubsection{content}
+
+\todo[inline]{nicer, less structure-in-your-face introduction in \Cref{sec:intro:gi:components}, in order to ... it is necessary to have an understanding of...}
+
+\todo[inline][more conclusion by adding summaries of the approaches, how did we come to these conclusions, we've been able to show...]
+
+\todo[inline] {some closing remarks. add some personal evaluations, broad statement about complexity}
+
+\todo[inline]{summarize ISM deficits in ISM discussion \Cref{sec:results:ism:discussion}}
 
 \todo[inline]{do some pseudocode}
 
@@ -172,8 +184,10 @@
 \subsubsection{misc}
 
 \todo[inline]{cleanup repository. rebase and cut the first unrelated commits out? decide on repository name, and maybe github name.}
-\todo[inline]{at least two subsections per section}
-\todo[inline,color=green]{no forward references}
+\todo[inline]{at least two subsections per section. Tiled Shading is left}
+\todo[inline]{fix font size on last page}
+
+
 \todo[inline]{brighter version for print}
 \todo[inline]{cleanup references}
 \todo[inline]{noindent after figures}
