Fix font size in statutorydeclaration

--- a/statutorydeclaration.tex
+++ b/statutorydeclaration.tex
@@ -1,3 +1,5 @@
+%!TEX root = foo-thesis.tex
+
 \pagestyle{plain}
 
 \chapter*{Eidesstattliche Erklärung}
@@ -13,7 +15,7 @@ Diese Arbeit hat in gleicher oder ähnlicher Form noch keiner Prüfungsbehörde 
 
 \noindent
 \begin{tabular}{p{0.4\linewidth}p{0.1\linewidth}p{0.4\linewidth}}
-{\Large Potsdam, \today}&&\\
+Potsdam, \today &&\\
 \cline{1-1}
 \cline{3-3}
 (Ort, Datum)&&(Unterschrift)
